// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomBar > can render 4 items and an overflow menu 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-20 el-bottom-bar"
  >
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 1
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 2
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 3
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 4
      </span>
    </button>
    <div
      class="mocked-styled-21 el-bottom-bar-more-menu el-menu"
      data-alignment="right"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mocked-styled-5 el-button-bottom-bar-item-container"
        role="button"
      >
        <div
          class="mocked-styled-2 el-bottom-bar-item-content"
        >
          <div
            class="mocked-styled-0 el-bottom-bar-item-icon"
            role="presentation"
          >
            <span
              class="mocked-styled-6 el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name more"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 12C7 13.1046 6.10457 14 5 14C3.89543 14 3 13.1046 3 12C3 10.8954 3.89543 10 5 10C6.10457 10 7 10.8954 7 12Z"
                  fill="currentColor"
                />
                <path
                  d="M12 14C13.1046 14 14 13.1046 14 12C14 10.8954 13.1046 10 12 10C10.8954 10 10 10.8954 10 12C10 13.1046 10.8954 14 12 14Z"
                  fill="currentColor"
                />
                <path
                  d="M19 14C20.1046 14 21 13.1046 21 12C21 10.8954 20.1046 10 19 10C17.8954 10 17 10.8954 17 12C17 13.1046 17.8954 14 19 14Z"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <span
          class="mocked-styled-1 el-bottom-bar-item-label"
        >
          More
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BottomBar > can render 5 items 1`] = `
<DocumentFragment>
  <div
    class="mocked-styled-20 el-bottom-bar"
  >
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 1
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 2
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 3
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 4
      </span>
    </button>
    <button
      class="mocked-styled-5 el-button-bottom-bar-item-container"
    >
      <div
        class="mocked-styled-2 el-bottom-bar-item-content"
      >
        <div
          class="mocked-styled-0 el-bottom-bar-item-icon"
          role="presentation"
        >
          <span>
            mock icon
          </span>
        </div>
      </div>
      <span
        class="mocked-styled-1 el-bottom-bar-item-label"
      >
        Menu 5
      </span>
    </button>
  </div>
</DocumentFragment>
`;
